Add css and html improvements

--- a/index.html
+++ b/index.html
@@ -1,176 +1,160 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="x-ua-compatible" content="ie=edge">
+      <title>Smoothie Modal</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+      <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/modal.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-      <div class="modal-wrapper js-modal-wrapper">
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+      <link rel="stylesheet" href="css/defaults/normalize.css">
+      <link rel="stylesheet" href="css/defaults/main.css">
+      <link rel="stylesheet" href="css/smoothie-modal-theme.css">
+      <link rel="stylesheet" href="css/smoothie-modal.css">
+      <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  </head>
+  <body>
+    <div class="smoothie-modal-wrapper js-modal-wrapper">
+      <!--[if lt IE 8]>
+          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <button class="js-modal-open" data-modal="test">Modal test</button>
-        <button class="js-modal-open" data-modal="new">Modal new</button>
-        <button class="js-modal-open" data-modal="brand">Modal brand</button>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-      </div>
+      <section class="section-1">
+        <button class="section-btn js-modal-open" data-modal="default">Smoothie Modal Default</button>
+      </section>
+      <section class="section-2">
+        <button class="section-btn js-modal-open" data-modal="centered">Smoothie Modal Сentered</button>
+      </section>
+      <section class="section-3">
+        <button class="section-btn js-modal-open" data-modal="withscroll">Smoothie Modal With Scroll</button>
+      </section>
+      <section class="section-4">
+        <button class="section-btn js-modal-open" data-modal="multiple">Smoothie Modal "Multiple"</button>
+      </section>
+    </div>
 
-      <div class="modal js-modal-window" data-modal="test">
-        <div class="modal-inner">
-          <h2>Modal header (TEST)</h2>
+    <div class="smoothie-modal js-modal-window" data-modal="default">
+      <div class="smoothie-modal-inner">
+        <div class="smoothie-modal-header">
+          <h2 class="smoothie-modal-headline">Smoothie Modal Header (Default)</h2>
+        </div>
+        <div class="smoothie-modal-content">
+          <p>
+            Smoothie Modal Content (Default)
+          </p>
+        </div>
+        <div class="smoothie-modal-footer">
+          <button class="smoothie-modal-btn js-modal-close" data-modal="default">Close</button>
         </div>
       </div>
-      <div class="modal-overlay js-modal-overlay js-modal-close" data-modal="test"></div>
+    </div>
+    <div class="smoothie-modal-overlay js-modal-overlay js-modal-close" data-modal="default"></div>
 
-      <div class="modal js-modal-window" data-modal="new">
-        <div class="modal-inner">
-          <h2>Modal header (NEW)</h2>
-          <button class="js-modal-close" data-modal="new">Close</button>
-          <button class="js-modal-open" data-modal="test">Open test</button>
+    <div class="smoothie-modal smoothie-modal-center js-modal-window" data-modal="centered">
+      <div class="smoothie-modal-inner">
+        <div class="smoothie-modal-header">
+          <h2 class="smoothie-modal-headline">Smoothie Modal Header (Сentered)</h2>
+        </div>
+        <div class="smoothie-modal-content">
+          <p>
+            Smoothie Modal Content (Сentered)
+          </p>
+        </div>
+        <div class="smoothie-modal-footer">
+          <button class="smoothie-modal-btn js-modal-close" data-modal="centered">Close</button>
         </div>
       </div>
-      <div class="modal-overlay js-modal-overlay js-modal-close" data-modal="new"></div>
+    </div>
+    <div class="smoothie-modal-overlay js-modal-overlay js-modal-close" data-modal="centered"></div>
 
-      <div class="modal js-modal-window" data-modal="brand">
-        <div class="modal-inner">
-          <h2>Modal header (Brand)</h2>
-          <button class="js-modal-close" data-modal="brand">Close</button>
-          <button class="js-modal-open" data-modal="new">Open new</button>
-          <button class="js-modal-open" data-modal="test">Open test</button>
-          <textarea name="name" rows="50" cols="10"></textarea>
+    <div class="smoothie-modal js-modal-window" data-modal="withscroll">
+      <div class="smoothie-modal-inner">
+        <div class="smoothie-modal-header">
+        <h2 class="smoothie-modal-headline">Smoothie Modal Header (With Scroll)</h2>
+        </div>
+        <div class="smoothie-modal-content">
+          <p>
+            Smoothie Modal Content (With Scroll)
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Nam sit amet nisl faucibus, ultricies nisl id, venenatis nunc.
+            Sed mollis tincidunt hendrerit. Aliquam metus leo, dapibus vel
+            congue sed, posuere sit amet lorem. Integer a justo tristique
+            ipsum pharetra scelerisque. Pellentesque habitant morbi tristique
+            senectus et netus et malesuada fames ac turpis egestas. Phasellus
+            euismod odio eget sem tincidunt eleifend. Integer semper, risus
+            ut imperdiet finibus, nisl neque fermentum libero, sit amet
+            bibendum tortor ex sed metus.
+          </p>
+          <p>
+            Vestibulum ante ipsum primis in faucibus orci luctus
+            et ultrices posuere cubilia Curae; Integer quis ex in
+            metus dictum sagittis vel eu leo. Suspendisse sit amet
+            metus lectus. Donec vestibulum quis massa pulvinar feugiat.
+            Cras tempus erat quis libero laoreet consequat. Duis sagittis
+            ultricies odio, ut iaculis massa varius eget. Integer
+            consectetur vestibulum quam id porttitor. Suspendisse
+            euismod sed nisi sit amet rutrum. Sed sit amet tellus varius,
+            cursus risus at, euismod lacus. Nam tincidunt odio nec laoreet
+            volutpat. Nam orci odio, laoreet ac felis laoreet, accumsan
+            tristique velit. Sed eu mauris fermentum, pharetra risus eget,
+            viverra orci. In eget accumsan dolor. Donec nec mollis arcu.
+            In hac habitasse platea dictumst. Proin blandit rhoncus massa
+            blandit luctus.
+          </p>
+          <p>
+            Morbi sodales suscipit dui, hendrerit commodo eros porttitor
+            sit amet. Aliquam ornare quam quam, in pulvinar quam molestie
+            quis. Aenean malesuada, metus at tincidunt rutrum, ex orci
+            dignissim arcu, in vehicula elit felis sit amet tortor. Nunc
+            ut arcu dolor. Etiam rutrum tortor justo, id suscipit ante
+            tempus quis. Proin accumsan ex in risus varius euismod vel in
+            ligula. Morbi varius dictum sodales. Cras in nulla a urna
+            ultricies efficitur vel ac augue. Nunc viverra tortor quis
+            tellus accumsan finibus. Duis eu elit ac mauris facilisis
+            tincidunt. Donec ac vehicula nunc, convallis tempor lacus.
+            Cras consectetur, elit ac interdum vulputate, tortor felis
+            tempus sapien, sit amet iaculis nibh purus nec lectus. Nullam
+            at nunc nec risus eleifend consequat.
+          </p>
+        </div>
+        <div class="smoothie-modal-footer">
+          <button class="smoothie-modal-btn js-modal-close" data-modal="withscroll">Close</button>
         </div>
       </div>
-      <div class="modal-overlay js-modal-overlay js-modal-close" data-modal="brand"></div>
+    </div>
+    <div class="smoothie-modal-overlay js-modal-overlay js-modal-close" data-modal="withscroll"></div>
 
-      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-      <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-      <script src="js/plugins.js"></script>
-      <script src="js/main.js"></script>
+    <div class="smoothie-modal smoothie-modal-center js-modal-window" data-modal="multiple">
+      <div class="smoothie-modal-inner">
+        <div class="smoothie-modal-header">
+          <h2 class="smoothie-modal-headline">Smoothie Modal Header (Multiple)</h2>
+        </div>
+        <div class="smoothie-modal-content">
+          <p>
+            Smoothie Modal Content (Multiple)
+          </p>
+          <p>
+            <button class="smoothie-modal-btn js-modal-open" data-modal="default">Smoothie Modal Default</button>
+          <p>
+            <button class="smoothie-modal-btn js-modal-open" data-modal="centered">Smoothie Modal Сentered</button>
+          </p>
+          <p>
+            <button class="smoothie-modal-btn js-modal-open" data-modal="withscroll">Smoothie Modal With Scroll</button>
+          </p>
+        </div>
+        <div class="smoothie-modal-footer">
+          <button class="smoothie-modal-btn js-modal-close" data-modal="multiple">Close</button>
+        </div>
+      </div>
+    </div>
+    <div class="smoothie-modal-overlay js-modal-overlay js-modal-close" data-modal="multiple"></div>
 
-      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-      <script>
-          (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-          function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-          e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-          e.src='https://www.google-analytics.com/analytics.js';
-          r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-          ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-      </script>
-    </body>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <script src="js/smoothie-modal.js"></script>
+  </body>
 </html>
