js/html improvements

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
     <div class="smoothie-modal-overlay js-modal-overlay js-modal-close" data-modal="withscroll"></div>
 
-    <div class="smoothie-modal smoothie-modal-center js-modal-window" data-modal="multiple">
+    <div class="smoothie-modal js-modal-window" data-modal="multiple">
       <div class="smoothie-modal-inner">
         <div class="smoothie-modal-header">
           <h2 class="smoothie-modal-headline">Smoothie Modal Header (Multiple)</h2>
